report4/ns/lv/landbouwgebruiksperceel/v0.1.0/oslo-converter-ea.report.md
#||# oslo-converter-ea for diagram Landbouwgebruiksperceel

#||# -------------------------------------

2026-08-03T09:34:30.376Z info: Connector Model:Landbouwgebruiksperceel:GeregistreerdeOrganisatie:(GeregistreerdeOrganisatie -> Organisatie) is not an association with a source role. Ignoring this connector.

2026-08-03T09:34:30.378Z info: Connector Model:Landbouwgebruiksperceel:Landbouwgebruiksperceel:(Landbouwgebruiksperceel -> Agent) is not an association with a source role. Ignoring this connector.

2026-08-03T09:34:30.379Z info: Connector Model:Landbouwgebruiksperceel:GeregistreerdPersoon:(GeregistreerdPersoon -> Persoon) is not an association with a source role. Ignoring this connector.

2026-08-03T09:34:30.379Z info: Connector Model:Landbouwgebruiksperceel:Persoon:(Persoon -> Agent) is not an association with a source role. Ignoring this connector.

2026-08-03T09:34:30.379Z info: Connector Model:Landbouwgebruiksperceel:Organisatie:(Organisatie -> Agent) is not an association with a source role. Ignoring this connector.

2026-08-03T09:34:30.379Z info: Connector Model:Belgif-Auth:Activiteittype-NACEBEL2025:(Activiteittype-NACEBEL2025 -> Activiteittype-v1) is not an association with a source role. Ignoring this connector.

2026-08-03T09:34:30.379Z info: Connector Model:Landbouwgebruiksperceel:LandbouwActiviteit-v1:(LandbouwActiviteit-v1 -> Activiteittype-v1) is not an association with a source role. Ignoring this connector.

2026-08-03T09:34:30.380Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (OSLO-Template:GNSS-DCAT-AP). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.380Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (OSLO-Template:EU-IT6). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.380Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (OSLO-Template:W3C-DQV). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (OSLO-Template:IFC-BIM). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (OSLO-Template:OSLO-Template). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwperceel). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwperceel:W3C-Person). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwperceel:dcterms). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwperceel:W3C-Time). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwperceel:LV). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwperceel:REGORG). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z info: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:OSLO-Template). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:OSLO-Template:OSLO-Codelijst). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:OSLO-Template:W3C-Person). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwperceel:ORG). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwperceel:INSPIRE-LandCover). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Landbouwperceel:LADM). Using fallback URI (http://todo.com/) instead.

2026-08-03T09:34:30.381Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:VKBO). Using fallback URI (http://todo.com/) instead.

Error: [ConnectorConverterHandler]: Package tag (Landgebruiksperceel) was set for connector uitbater, but could not find the package object.

    at /usr/local/lib/node_modules/@oslo-flanders/ea-converter/lib/converter-handlers/ConnectorConverterHandler.js:79:27

    at Array.forEach (<anonymous>)

    at ConnectorConverterHandler.assignUris (/usr/local/lib/node_modules/@oslo-flanders/ea-converter/lib/converter-handlers/ConnectorConverterHandler.js:59:27)

    at /usr/local/lib/node_modules/@oslo-flanders/ea-converter/lib/ConverterHandlerService.js:38:50

    at Array.map (<anonymous>)

    at ConverterHandlerService.assignUris (/usr/local/lib/node_modules/@oslo-flanders/ea-converter/lib/ConverterHandlerService.js:38:37)

#||# -------------------------------------

file landbouwgebruiksperceel.jsonld does not exist

